--- a/PracticasHTML- CSS-JS/estilos.css
+++ b/PracticasHTML- CSS-JS/estilos.css
@@ -1,9 +1,10 @@
-body{display: inline-block;}
+body{display: flex;}
 
 header{
-    padding: 20px;
-    margin: 20px;
+    padding: 20px 20px;
+    margin: 20px 20px;
     width: 650px;
+    height: 200px;
     background-color: lavenderblush;
     text-align: center;
 }
